# emotion_detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  start.py
.dvc/: config
data/raw/emotions/: .gitignore  EmotionsGo_OneAI.csv.dvc  EmotionsGo_RU.csv.dvc  cedr.csv.dvc  dairai_emotion.csv.dvc  dairai_emotion.txt.dvc  emotionsGo_ru.txt.dvc  ok_ml_cup.csv.dvc  ok_ml_cup.tsv.dvc  six_emotions.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Prepare_cedr.ipynb  Prepare_ok_ml_cup.ipynb  Prepare_translate.ipynb  concat_all.ipynb
src/: __init__.py
src/configs/: base_config.py
src/data/: split_dataset.py
src/models/: train_model.py
