[tool.poetry]
name = "mfdp-sentiment"
version = "0.1.0"
description = ""
authors = ["Vlasov Viktor"]
readme = "README.md"
packages = [{include = "mfdp_sentiment"}]

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.0.2"
transformers = "^4.29.2"
numpy = "^1.24.3"
torch = "^2.0.1"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
datasets = "^2.12.0"
ruff = "^0.0.269"
seaborn = "^0.12.2"
dvc = {extras = ["s3"], version = "^2.58.1"}
yacs = "^0.1.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
